--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@nuxtjs/firebase": "^8.2.2",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
+    "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
-    "firebase": "^9.6.10",
+    "firebase": "^9.6.11",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
