--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxtjs/moment": "^1.6.1"
+    "@nuxtjs/moment": "^1.6.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^10.4.1"
   }
 }
